(11 May 2021)
changelog:

<<<<<<<<<<<<<Page:>>>>>>>>>>>>>
{Controller Surat}
    -> Setelah input form surat redirect ke halaman preview
    -> input tanggal pembuatan surat
    -> edit form surat dinas (menghapus input yg tidak diperlukan, kesesuaian dll)
    -> buat form surat niaga
    -> ubah view semua surat dinas
        - ganti kota menjadi kota_tujuan
        - Hapus tulisan NIP (NIP ditulis lgs karena tidak semua memiliki NIP)

<<<<<<<<<<<<<Model:>>>>>>>>>>>>>
Model Surat = ganti nama function dinas_blok menjadi dinas()

<<<<<<<<<<<Database: >>>>>>>>>>>
Tabel surat_user 
    -> ganti field nama_user menjadi id_user

Tabel users 
    -> ganti field id menjad id_user

Tabel Surat 
    -> ganti field id menjadi id_surat
    -> hapus field ucapan ... pindahkan ke field penerima
    -> tambah field instansi_tujuan
    -> tambah field kota tujuan (kota untuk kota asal instansi)
    -> tambah field kode pos

<<<<<<<<<<<<<<<<<<TO DO LIST>>>>>>>>>>>>>>>>>>
Mengubah format tanggal surat menjadi format indonesia cth:29 Maret 2021	
Memperbaiki Margin Surat
Format Telp dan Email pada kop surat